--- a/notebooks/gradient.ipynb
+++ b/notebooks/gradient.ipynb
@@ -15,12 +15,13 @@
    "source": [
     "# Add temporary path to code\n",
     "import sys\n",
-    "sys.path.append(\"../k_armed_bandit/\")\n",
+    "sys.path.append(\"../\")\n",
     "\n",
-    "import utils\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from tqdm import tqdm\n",
+    "from k_armed_bandit.utils import plot_bandit_dist, run_bandit_gradient\n",
+    "\n",
     "\n",
     "# For reproducibility\n",
     "np.random.seed(123)"
@@ -58,7 +59,7 @@
     "    bandit.append((mean, std))\n",
     "    \n",
     "# Plot rewards actions\n",
-    "utils.plot_bandit_dist(bandit)\n",
+    "plot_bandit_dist(bandit)\n",
     "plt.show()"
    ]
   },
@@ -71,7 +72,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1000/1000 [11:32<00:00,  1.44it/s]\n"
+      "100%|██████████| 1000/1000 [12:15<00:00,  1.36it/s]\n"
      ]
     },
     {
@@ -118,10 +119,10 @@
     "\n",
     "# Run bandits\n",
     "for run in tqdm(range(num_runs)):\n",
-    "    H1, R1[run, :], A1[run, :] = utils.run_bandit_gradient(bandit, num_steps, alpha=0.1)\n",
-    "    H2, R2[run, :], A2[run, :] = utils.run_bandit_gradient(bandit, num_steps, alpha=0.4)\n",
-    "    H3, R3[run, :], A3[run, :] = utils.run_bandit_gradient(bandit, num_steps, alpha=0.1, baseline=False)\n",
-    "    H4, R4[run, :], A4[run, :] = utils.run_bandit_gradient(bandit, num_steps, alpha=0.4, baseline=False)\n",
+    "    H1, R1[run, :], A1[run, :] = run_bandit_gradient(bandit, num_steps, alpha=0.1)\n",
+    "    H2, R2[run, :], A2[run, :] = run_bandit_gradient(bandit, num_steps, alpha=0.4)\n",
+    "    H3, R3[run, :], A3[run, :] = run_bandit_gradient(bandit, num_steps, alpha=0.1, baseline=False)\n",
+    "    H4, R4[run, :], A4[run, :] = run_bandit_gradient(bandit, num_steps, alpha=0.4, baseline=False)\n",
     "\n",
     "# Plot average reward\n",
     "plt.figure(figsize=(7, 5))\n",
