--- a/notebooks/nonstationary.ipynb
+++ b/notebooks/nonstationary.ipynb
@@ -15,12 +15,13 @@
    "source": [
     "# Add temporary path to code\n",
     "import sys\n",
-    "sys.path.append(\"../k_armed_bandit/\")\n",
+    "sys.path.append(\"../\")\n",
     "\n",
-    "import utils\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from tqdm import tqdm\n",
+    "from k_armed_bandit.utils import plot_bandit_dist, run_bandit_nonstat\n",
+    "\n",
     "\n",
     "# For reproducibility\n",
     "np.random.seed(123)"
@@ -35,7 +36,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1000/1000 [37:28<00:00,  2.25s/it]\n"
+      "100%|██████████| 1000/1000 [36:01<00:00,  2.16s/it]\n"
      ]
     },
     {
@@ -80,9 +81,9 @@
     "\n",
     "# Run bandits\n",
     "for run in tqdm(range(num_runs)):\n",
-    "    Q1, R1[run, :], A1[run, :] = utils.run_bandit_nonstat(k, num_steps, epsilon=0.1, alpha=0.1)\n",
-    "    Q2, R2[run, :], A2[run, :] = utils.run_bandit_nonstat(k, num_steps, epsilon=0.05, alpha=0.1)\n",
-    "    Q3, R3[run, :], A3[run, :] = utils.run_bandit_nonstat(k, num_steps, epsilon=0, alpha=0.1)\n",
+    "    Q1, R1[run, :], A1[run, :] = run_bandit_nonstat(k, num_steps, epsilon=0.1, alpha=0.1)\n",
+    "    Q2, R2[run, :], A2[run, :] = run_bandit_nonstat(k, num_steps, epsilon=0.05, alpha=0.1)\n",
+    "    Q3, R3[run, :], A3[run, :] = run_bandit_nonstat(k, num_steps, epsilon=0, alpha=0.1)\n",
     "\n",
     "# Plot average reward\n",
     "plt.figure(figsize=(7, 5))\n",
