--- a/notebooks/optimistic.ipynb
+++ b/notebooks/optimistic.ipynb
@@ -15,12 +15,12 @@
    "source": [
     "# Add temporary path to code\n",
     "import sys\n",
-    "sys.path.append(\"../k_armed_bandit/\")\n",
+    "sys.path.append(\"../\")\n",
     "\n",
-    "import utils\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from tqdm import tqdm\n",
+    "from k_armed_bandit.utils import plot_bandit_dist, run_bandit_stat\n",
     "\n",
     "# For reproducibility\n",
     "np.random.seed(123)"
@@ -58,7 +58,7 @@
     "    bandit.append((mean, std))\n",
     "    \n",
     "# Plot rewards actions\n",
-    "utils.plot_bandit_dist(bandit)\n",
+    "plot_bandit_dist(bandit)\n",
     "plt.show()"
    ]
   },
@@ -73,7 +73,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1000/1000 [03:13<00:00,  5.18it/s]\n"
+      "100%|██████████| 1000/1000 [03:47<00:00,  4.39it/s]\n"
      ]
     },
     {
@@ -115,10 +115,10 @@
     "\n",
     "# Run bandits\n",
     "for run in tqdm(range(num_runs)):\n",
-    "    Q1, R1[run, :], A1[run, :] = utils.run_bandit_stat(bandit, num_steps, epsilon=0, \n",
-    "                                                       alpha=0.1, initial_values=Q1_0)\n",
-    "    Q2, R2[run, :], A2[run, :] = utils.run_bandit_stat(bandit, num_steps, epsilon=0.1, \n",
-    "                                                       alpha=0.1)  # Initial values are 0\n",
+    "    Q1, R1[run, :], A1[run, :] = run_bandit_stat(bandit, num_steps, epsilon=0, \n",
+    "                                                 alpha=0.1, initial_values=Q1_0)\n",
+    "    Q2, R2[run, :], A2[run, :] = run_bandit_stat(bandit, num_steps, epsilon=0.1, \n",
+    "                                                 alpha=0.1)  # Initial values are 0\n",
     "\n",
     "# Plot average reward\n",
     "plt.figure(figsize=(7, 5))\n",
