--- a/notebooks/stationary.ipynb
+++ b/notebooks/stationary.ipynb
@@ -15,12 +15,12 @@
    "source": [
     "# Add temporary path to code\n",
     "import sys\n",
-    "sys.path.append(\"../k_armed_bandit/\")\n",
+    "sys.path.append(\"../\")\n",
     "\n",
-    "import utils\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from tqdm import tqdm\n",
+    "from k_armed_bandit.utils import plot_bandit_dist, run_bandit_stat\n",
     "\n",
     "# For reproducibility\n",
     "np.random.seed(123)"
@@ -58,7 +58,7 @@
     "    bandit.append((mean, std))\n",
     "    \n",
     "# Plot rewards actions\n",
-    "utils.plot_bandit_dist(bandit)\n",
+    "plot_bandit_dist(bandit)\n",
     "plt.show()"
    ]
   },
@@ -73,7 +73,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1000/1000 [04:41<00:00,  3.56it/s]\n"
+      "100%|██████████| 1000/1000 [05:29<00:00,  3.04it/s]\n"
      ]
     },
     {
@@ -117,9 +117,9 @@
     "\n",
     "# Run bandits\n",
     "for run in tqdm(range(num_runs)):\n",
-    "    Q1, R1[run, :], A1[run, :] = utils.run_bandit_stat(bandit, num_steps, epsilon=0.1)\n",
-    "    Q2, R2[run, :], A2[run, :] = utils.run_bandit_stat(bandit, num_steps, epsilon=0.05)\n",
-    "    Q3, R3[run, :], A3[run, :] = utils.run_bandit_stat(bandit, num_steps, epsilon=0)\n",
+    "    Q1, R1[run, :], A1[run, :] = run_bandit_stat(bandit, num_steps, epsilon=0.1)\n",
+    "    Q2, R2[run, :], A2[run, :] = run_bandit_stat(bandit, num_steps, epsilon=0.05)\n",
+    "    Q3, R3[run, :], A3[run, :] = run_bandit_stat(bandit, num_steps, epsilon=0)\n",
     "\n",
     "# Plot average reward\n",
     "plt.figure(figsize=(7, 5))\n",
