--- a/notebooks/upperConfidenceBound.ipynb
+++ b/notebooks/upperConfidenceBound.ipynb
@@ -15,12 +15,12 @@
    "source": [
     "# Add temporary path to code\n",
     "import sys\n",
-    "sys.path.append(\"../k_armed_bandit/\")\n",
+    "sys.path.append(\"../\")\n",
     "\n",
-    "import utils\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from tqdm import tqdm\n",
+    "from k_armed_bandit.utils import plot_bandit_dist, run_bandit_ucb, run_bandit_stat\n",
     "\n",
     "# For reproducibility\n",
     "np.random.seed(123)"
@@ -58,7 +58,7 @@
     "    bandit.append((mean, std))\n",
     "    \n",
     "# Plot rewards actions\n",
-    "utils.plot_bandit_dist(bandit)\n",
+    "plot_bandit_dist(bandit)\n",
     "plt.show()"
    ]
   },
@@ -73,15 +73,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 0/1000 [00:00<?, ?it/s]../k_armed_bandit/utils.py:56: RuntimeWarning: divide by zero encountered in log\n",
+      "  0%|          | 0/1000 [00:00<?, ?it/s]../k_armed_bandit/utils.py:112: RuntimeWarning: divide by zero encountered in log\n",
       "  action_upb = Q + c * np.sqrt(np.log(iteration) / N)\n",
-      "../k_armed_bandit/utils.py:56: RuntimeWarning: invalid value encountered in sqrt\n",
+      "../k_armed_bandit/utils.py:112: RuntimeWarning: invalid value encountered in sqrt\n",
       "  action_upb = Q + c * np.sqrt(np.log(iteration) / N)\n",
-      "../k_armed_bandit/utils.py:56: RuntimeWarning: invalid value encountered in true_divide\n",
+      "../k_armed_bandit/utils.py:112: RuntimeWarning: invalid value encountered in true_divide\n",
       "  action_upb = Q + c * np.sqrt(np.log(iteration) / N)\n",
-      "../k_armed_bandit/utils.py:56: RuntimeWarning: divide by zero encountered in true_divide\n",
+      "../k_armed_bandit/utils.py:112: RuntimeWarning: divide by zero encountered in true_divide\n",
       "  action_upb = Q + c * np.sqrt(np.log(iteration) / N)\n",
-      "100%|██████████| 1000/1000 [03:17<00:00,  5.07it/s]\n"
+      "100%|██████████| 1000/1000 [04:03<00:00,  4.10it/s]\n"
      ]
     },
     {
@@ -123,8 +123,8 @@
     "\n",
     "# Run bandits\n",
     "for run in tqdm(range(num_runs)):\n",
-    "    Q1, R1[run, :], A1[run, :] = utils.run_bandit_ucb(bandit, num_steps, c=2) \n",
-    "    Q2, R2[run, :], A2[run, :] = utils.run_bandit_stat(bandit, num_steps, epsilon=0.1)\n",
+    "    Q1, R1[run, :], A1[run, :] = run_bandit_ucb(bandit, num_steps, c=2) \n",
+    "    Q2, R2[run, :], A2[run, :] = run_bandit_stat(bandit, num_steps, epsilon=0.1)\n",
     "\n",
     "# Plot average reward\n",
     "plt.figure(figsize=(7, 5))\n",
