--- a/notebooks/upper_confidence_bound.ipynb
+++ b/notebooks/upper_confidence_bound.ipynb
@@ -56,16 +56,13 @@
     "    bandit.append((q, std))\n",
     "    \n",
     "# Plot rewards actions\n",
-    "plot_bandit_dist(bandit)\n",
-    "plt.show()"
+    "plot_bandit_dist(bandit)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
@@ -155,9 +152,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.6.10 64-bit ('py36': conda)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python361064bitpy36conda18df730f2d0841c3afab0c6447ed77d8"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -169,7 +166,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
