--- a/notebooks/nonstationary.ipynb
+++ b/notebooks/nonstationary.ipynb
@@ -112,15 +112,15 @@
    "metadata": {},
    "source": [
     "## References\n",
-    "[Reinforcement Learning: Multi-armed Bandits (Chapter 2)](https://mitpress.mit.edu/books/reinforcement-learning-second-edition)"
+    "[Reinforcement Learning: Multi-armed Bandits (Chapter 2)](http://incompleteideas.net/book/the-book.html)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.6.10 64-bit ('py36': conda)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python361064bitpy36conda18df730f2d0841c3afab0c6447ed77d8"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -132,7 +132,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.6.12"
   }
  },
  "nbformat": 4,
