--- a/notebooks/optimistic.ipynb
+++ b/notebooks/optimistic.ipynb
@@ -63,9 +63,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
@@ -143,7 +141,7 @@
    "metadata": {},
    "source": [
     "## References\n",
-    "[Reinforcement Learning: Multi-armed Bandits (Chapter 2)](https://mitpress.mit.edu/books/reinforcement-learning-second-edition)"
+    "[Reinforcement Learning: Multi-armed Bandits (Chapter 2)](http://incompleteideas.net/book/the-book.html)"
    ]
   }
  ],
@@ -163,7 +161,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.6.12"
   }
  },
  "nbformat": 4,
