--- a/notebooks/stationary.ipynb
+++ b/notebooks/stationary.ipynb
@@ -143,7 +143,7 @@
    "metadata": {},
    "source": [
     "## References\n",
-    "[Reinforcement Learning: Multi-armed Bandits (Chapter 2)](https://mitpress.mit.edu/books/reinforcement-learning-second-edition)"
+    "[Reinforcement Learning: Multi-armed Bandits (Chapter 2)](http://incompleteideas.net/book/the-book.html)"
    ]
   }
  ],
@@ -163,7 +163,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.6.12"
   }
  },
  "nbformat": 4,
